syntax ="proto3";
option java_multiple_files = true;
option java_package = "orders";
service orderGoods{
  rpc TakeNewOrderFromCustomerId (CustomerId) returns (ExistOrNot);
  rpc TakeNNumbersOfOrdersFromCustomer (OrdersFromCustomer) returns (GoodsExist);
}
message CustomerId{
  string id = 1;
}
message ExistOrNot{
  string message = 1;
}
message Goods{
  string good_id = 1;
  int32 quantity = 2;
  double price = 3;
}
message OrdersFromCustomer{
  repeated Goods ListOfGoods = 1;
}
message GoodsExist{
  string message = 1;
}
