syntax = "proto3";
package order.details;
option java_multiple_files = true;
message OrderDetails{
  string orderId =1;
  string email = 2;
  string goodsId = 3;
  int32 quantity = 4;
  double totalPrice = 5;
  string status = 6;
  string orderDate = 7;
}
